# MS-in-IOT-UMass-Amherest--ECE697-MIPS-Simulation

./: .gitignore  CMakeLists.txt  README.md  assembler.cpp  assembler.h  executor.cpp  executor.h  isa.cpp  isa.h  main.cpp
doc/: README.md
input/: MIPS.asm  sandbox.asm  test-beq.asm  test-mul.asm
output/: resource-utilization.json  test-beq--resource-utilization.json  test-beq--system-state-plot.txt  test-mul--system-state-plot.txt
